dark model fixed

--- a/css/reset.css
+++ b/css/reset.css
@@ -51,6 +51,11 @@
   visibility: hidden;
 }
 
+#footer a,a:link,a:visited,a:hover,a:active{
+  text-decoration: none !important;
+  color: #212529 !important;
+}
+
 .display-none{
   display: none;
 }
